# ai-agent-learning

./: .gitignore
000-python-boiletplate/: Justfile  pyproject.toml
001-python/: pyproject.toml
001-python/src/: list.py  tupple.py
002-nlp/: pyproject.toml
002-nlp/src/: 001-lowercase-words.ipynb  002-remove-stopwords.ipynb  003-regex.ipynb
003-ai-agent/003-001-first-ai-agent/: Justfile  docker-compose.local.yml  pyproject.toml
003-ai-agent/003-001-first-ai-agent/src/: main.py
003-ai-agent/003-001-first-ai-agent/src/tools/: index.py
003-ai-agent/003-002-first-ai-agent-with-api/: .env.template  .gitignore  Justfile  docker-compose.local.yml  pyproject.toml  ruff.toml
003-ai-agent/003-002-first-ai-agent-with-api/docker/: Dockerfile.python
003-ai-agent/003-002-first-ai-agent-with-api/src/: app.py  main.py
003-ai-agent/003-002-first-ai-agent-with-api/src/custom_agents/: transcript_summarizer.py
003-ai-agent/003-002-first-ai-agent-with-api/src/helpers/: transcript.py
003-ai-agent/003-002-first-ai-agent-with-api/src/http_error/: bad_request.py
003-ai-agent/003-002-first-ai-agent-with-api/src/http_error/common/: error_res_body.py
003-ai-agent/003-002-first-ai-agent-with-api/src/tools/: index.py  transcript.py
004-langchain/004-001-basic-langchain/: pyproject.toml  ruff.toml
004-langchain/004-001-basic-langchain/src/: app.py  main.py
004-langchain/004-001-basic-langchain/src/custom_agents/: transcript_summarizer.py
004-langchain/004-001-basic-langchain/src/custom_agents/agents/: index.py  ollama.py
004-langchain/004-001-basic-langchain/src/http_error/: bad_request.py
004-langchain/004-001-basic-langchain/src/tools/: index.py  transcript.py
004-langchain/004-002-basic-langchain-with-stream/: .dockerignore
004-langchain/004-002-basic-rag/: .gitignore  docker-compose.local.yml  pyproject.toml
004-langchain/004-002-basic-rag-writing/: .env.template  docker-compose.local.yml  pyproject.toml
004-langchain/004-002-basic-rag-writing/src/: app.py
004-langchain/004-002-basic-rag-writing/src/agents/: embedding.py  xai.py
004-langchain/004-002-basic-rag-writing/src/controllers/: index.py
004-langchain/004-002-basic-rag-writing/src/controllers/embedding/: embedding.py  request_body.py  response_body.py
004-langchain/004-002-basic-rag-writing/src/db/: connection.py
004-langchain/004-002-basic-rag-writing/src/services/: embedding.py
(+2 files in other folders)
