[project]
name = "000-nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gensim>=4.4.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "spacy>=3.8.8",
    "textblob>=0.19.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "vadersentiment>=3.3.2",
]
