[project]
name = "004-001-basic-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "langchain>=1.2.6",
    "langchain-ollama>=1.0.1",
    "langchain-xai>=1.2.1",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
    "youtube-transcript-api>=1.2.3",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
    "watchfiles>=1.0.0",
]
